--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>BJJ STORE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container text-center">
-        <h1 class="mt-5">Welcome to Our Website</h1>
-        <p class="lead">Please log in or register to continue.</p>
-        <a href="login.html" class="btn btn-primary me-2">Login</a>
-        <a href="register.html" class="btn btn-secondary">Register</a>
+        <h1 class="mt-5">ยินดีต้อนรับสู่ทีม BJJ (บิ๊ก จี้ จ๊าบ)</h1>
+        <p class="lead">โปรด ล็อคอิน หรือ ลงทะเบียน เพื่อดำเนินการต่อ</p>
+        <a href="login.html" class="btn btn-primary me-2">ล็อคอิน</a>
+        <a href="register.html" class="btn btn-secondary">ลงทะเบียน</a>
     </div>
 </body>
 </html>
